[package]
name = "lia"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = {version = "1.20.1", features = ["macros", "rt-multi-thread"]}

[dependencies.serenity]
default-features = false
features = [
    "client", 
    "gateway", 
    "rustls_backend", 
    "model",
    "cache"
]
version = "0.11.5"