[package]
name = "lia"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = {version = "1.20.1", features = ["macros", "rt-multi-thread"]}
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
chrono = "0.4.22"

[dependencies.serenity]
default-features = false
features = [
    "client", 
    "gateway", 
    "rustls_backend", 
    "model",
    "cache"
]
version = "0.11.5"